--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.15.1",
+    "npm": "8.10.0"
+    },
   "description": "",
   "main": "server.js",
   "scripts": {
