--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": "16.15.1",
     "npm": "8.10.0"
-    },
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
